<resources>
    <string name="app_name">FMCG</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_menu">Home</string>
    <string name="txt_user_name_hint">User Name</string>
    <string name="txt_Password_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="fab_add_user">fab_AddUser</string>
    <string name="img_header">img_header</string>
    <string name="alert_exit">Thank you Have a Nice Day...!</string>
    <string name="alert_invalid_username">Invalid UserName</string>
    <string name="alert_invalid_password">Invalid Password</string>
    <string name="alert_welcome_user">Welcome  :  </string>
    <string name="alert_InvalidLogin">Username or Password Mismatch</string>
    <string name="title_activity_frm_menu">HOME</string>
    <string name="title_activity_login">LOGIN</string>
    <string name="title_activity_menu">HOME</string>
    <string name="title_activity_frm_product">PRODUCT</string>
    <string name="title_activity_purchase">PURCHASE</string>
    <string name="title_activity_frm_purchase">PURCHASE</string>
    <string name="title_activity_stock_report">STOCK REPORT</string>
    <string name="title_activity_frm_about">ABOUT</string>
    <string name="title_activity_purchase_report">PURCHASE REPORT</string>
    <string name="title_activity_sale_report">SALE REPORT</string>
    <string name="title_activity_reorder_level">RE-ORDER LEVEL</string>
    <string name="title_activity_frm_sale_table_list">TABLE LIST</string>
    <string name="title_activity_frm_sale_stock_list">STOCK LIST</string>
    <string name="title_activity_frm_sale_product_list">SALE PRODUCT LIST</string>
    <string name="title_activity_frm_company_settings">COMPANY SETTINGS</string>
    <string name="title_activity_frm_manage_tables">MANAGE TABLES</string>
    <string name="title_activity_frm_category">MANAGE CATEGORY</string>
    <string name="title_activity_frm_purchase_report">PURCHASE REPORT</string>
    <string name="title_activity_frm_sale_report">SALES REPORT</string>
    <string name="title_activity_frm_sales_product_list">SalesProductList</string>
    <string name="title_activity_frm_tab_category">FrmTabCategory</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title1">DenRestaurant V1.0</string>
    <string name="nav_header_title2">denariuapps@gmail.com</string>
    <string name="txt_product_menu">MANAGE PRODUCTS</string>
    <string name="txt_table_menu">MANAGE TABLE</string>
    <string name="txt_category_menu">MANAGE CATEGORY</string>
    <string name="txt_company_setting_menu">COMPANY SETTINGS</string>
    <string name="txt_purchase_menu">PURCHASE</string>
    <string name="txt_sales_menu">SALES</string>
    <string name="btn_logout">LogOut</string>
    <string name="btn_exit">Exit</string>
    <string name="alert_openlink">Open Download Link</string>
    <string name="install_later">Install Later</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_stock_report_menu">STOCK REPORT</string>
    <string name="txt_sales_report_menu">SALES REPORT</string>
    <string name="txt_purchase_report_menu">PUR-REPORT</string>
    <string name="txt_logout_menu">LOG OUT</string>
    <string name="table_name">Table Name</string>
    <string name="table_description">Description</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="ProductNameHint">Product Name</string>
    <string name="ProductPurchaseRateHint">Purchase Rate</string>
    <string name="ProductSellingRateHint">Selling Rate</string>
    <string name="ProductCategoryHint">Category</string>
    <string name="ProductHead">PRODUCTS</string>
    <string name="ime_save_label">Save</string>
    <string name="alert_ButtonOk">OK</string>
    <string name="alert_ButtonYes">YES</string>
    <string name="alert_ButtonNo">NO</string>
    <string name="ItemNameHint">Item Name</string>
    <string name="RateHint">Rate</string>
    <string name="QuantityHint">Quantity</string>
    <string name="PurchaseAmountHint">Amount</string>
    <string name="PurchaseHead">PURCHASE</string>
    <string name="bill_order_details_head">ORDER DETAILS</string>
    <string name="item_details_head">ITEMS</string>
    <string name="category_details_head">CATEGORY</string>
    <string name="item_name_head">Name</string>
    <string name="item_qty_head">Qty</string>
    <string name="item_rate_head">Rate</string>
    <string name="item_amt_head">Amount</string>
    <string name="lbl_grand_total">Grand Total</string>
    <string name="lbl_bill_number">Bill NO</string>
    <string name="lbl_bill_value_temp">1010</string>
    <string name="bill_num_search_hint">BIll Number</string>
    <string name="todate">To Date</string>
    <string name="fromdate">From Date</string>
    <string name="account">Account</string>
    <string name="sale">Sale</string>
    <string name="purchase">Purchase</string>
    <string name="exit">Home</string>
    <string name="print">Print</string>
    <string name="search">Search</string>
    <string name="hello_world">ImageButton</string>
    <string name="report_from_date">10/09/2016</string>
    <string name="report_to_date">17/09/2016</string>
    <string name="report_search_hint">A/C FROM or A/C TO</string>
    <string name="scrol_Main">ScrollMain</string>
    <string name="Lay_Main">LinearLayoutMain</string>
    <string name="Lay_Laycontent2">LinearLayoutHeading</string>
    <string name="Lay_Laycontent1">LLProductContent</string>
    <string name="Lay_LayItem1">LLProductName</string>
    <string name="Lay_LayItem2">LLRate</string>
    <string name="Lay_LayItem3">LLCategory</string>
    <string name="Lay_Laycontent3">LLMenuOption</string>
    <string name="Lay_LayItem4">LLExit</string>
    <string name="Lay_Laycontent4">LLSearch</string>
    <string name="StrockReportHead">Stock Report</string>
    <string name="PurchaseReportHead">Purchase Report</string>
    <string name="ProductQuantityHint">Opening Quantity</string>
    <string name="lbl_item_amount">Item Amount</string>
    <string name="lbl_discount">Discount</string>
    <string name="logout_menu">logout</string>
    <string name="help_menu">Help</string>
    <string name="about_menu">About</string>
    <string name="ProductRQuantityHint">Reorder Level</string>
    <string name="ReorderReportHead">Reorder Level</string>
    <string name="nav_menu_head_master">Master</string>
    <string name="nav_menu_head_transaction">Transaction</string>
    <string name="nav_menu_head_report">Report</string>
    <string name="nav_menu_manage_product">MANAGE PRODUCT</string>
    <string name="nav_menu_manage_employee">MANAGE EMPLOYEE</string>
    <string name="nav_menu_purchase">PURCHASE</string>
    <string name="nav_menu_accounts">ACCOUNTS</string>
    <string name="nav_menu_sales">SALES</string>
    <string name="nav_menu_report">OVER ALL REPORTS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_heading">Denariusoft Solution</string>
    <string name="nav_menu_stock_report">Stock Report</string>
    <string name="nav_menu_purchase_report">PURCHASE REPORT</string>
    <string name="nav_menu_sale_report">SALES REPORT</string>
    <string name="splash_company_name">Denariusoft Solution SDN BHD</string>
    <string name="splash_application_name_version">FMCG V1.0</string>
    <string name="alert_ButtonRetry">Retry</string>
    <string name="alert_ButtonCancel">CANCEL</string>
    <string name="login_name">Login Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="company_name">Company Name</string>
    <string name="fill_all_details">Fill All Details...!</string>
    <string name="saved_success">Saved SuccessFully...!</string>
    <string name="somethinkwaitingtosave">Something Waiting To Save Are You Sure Go Back Without Save...?</string>
    <string name="save">SAVE</string>
    <string name="select_source">Select Source</string>
    <string name="app_name_res">RESTAURANT</string>
    <string name="login_page">LOGIN</string>
    <string name="alert_title_alert">Alert</string>
    <string name="backup_menu">Backup</string>
    <string name="restore_menu">Restore</string>
    <string name="thankyouhaveaniceday">Thank You Have a Nice Day...!</string>
    <string name="chat_sale_report_name">Sales Report</string>
    <string name="chat_purchase_head">Purchase Report</string>
    <string name="camera_access_permisstion_dont_allow">DONT ALLOW</string>
    <string name="camera_access_permisstion_allow">ALLOW</string>
    <string name="app_needs_to_access_camera">App needs to access Camera.</string>
    <string name="camera_settings">Settings</string>
    <string name="category_already_exist">Category Already Exist</string>
    <string name="cantsavesomthingwrong">Can\'t Save Something Went Wrong</string>
    <string name="select_category_to_delete">Select Category to Delete</string>
    <string name="are_you_sure">Are You Sure....?</string>
    <string name="delete_successful">Deleted Successfully...!</string>
    <string name="cantdeletesomthingwrong">Can\'t Delete Something Went Wrong</string>
    <string name="categoryname">Category Name</string>
    <string name="alert_title_search">Search</string>
    <string name="alert_category_name_missing">Enter Category Name to Search</string>
    <string name="no_record_found">No Record Found.</string>
    <string name="category_des">Category Description</string>
    <string name="break_fast">Break Fast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="btn_choose_image">Choose Image</string>
    <string name="table_already_exist">Table Already Exist.</string>
    <string name="select_table_to_delete">Select Table to Delete</string>
    <string name="enter_tablename_to_search">Enter TableName to Search.</string>
    <string name="product_already_exist">Product Already Exist.</string>
    <string name="select_product_to_delete">Select Product to Delete</string>
    <string name="product_name">Product Name</string>
    <string name="enter_product_to_search">Enter Product Name to Search</string>
    <string name="alert_title_select_option">Select Option</string>
    <string name="enter_discount_amount">Enter Discount Amount</string>
    <string name="alert_ButtonDiscount">Discount</string>
    <string name="alert_title_discount">Discount</string>
    <string name="search_text_discount">Discount Amount</string>
    <string name="alert_select_item_to_discount">Select any Item to Discount</string>
    <string name="select_any_one_item">Select any one Item</string>
    <string name="search_term_missing">Search Term Missing</string>
    <string name="bill_num_not_crct">Bill Number Not Correct.</string>
    <string name="are_you_sure_want_to_exit">Are You Sure Want to Exit.</string>
    <string name="are_you_sure_want_to_goback">Are You Sure Want to GoBack</string>
    <string name="saved">Save</string>
    <string name="please_choose_item_to_print">Please Choose Item to Print.</string>
    <string name="database">BackUp</string>
    <string name="nav_menu_companySettings">COMPANY SETTINGS</string>
    <string name="email">Email ID</string>
    <string name="nav_menu_uom">UOM</string>
    <string name="nav_menu_stock_group">STOCK GROUP</string>
    <string name="customerNameHint">Customer Name</string>
    <string name="Address1Hint">Address</string>
    <string name="CityHint">City</string>
    <string name="GstHint">GST</string>
    <string name="OpenningBalanceHint">OpenningBalance</string>
    <string name="CustomerCreditAmountHint">Credit Amount</string>
    <string name="CustomerCreditLimitHint">Credit Limit</string>
</resources>