<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout_menu"
        android:menuCategory="container"
        android:icon="@drawable/ic_logout"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_help"
        android:title="@string/help_menu"
        android:menuCategory="container"
        android:icon="@drawable/ic_help_outline_black_24dp"
        app:showAsAction="withText|collapseActionView" />

    <item
        android:id="@+id/action_About"
        android:title="@string/about_menu"
        android:menuCategory="container"
        android:icon="@android:drawable/ic_dialog_alert"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_Backup"
        android:title="@string/database"
        android:menuCategory="container"
        android:icon="@drawable/ic_help_outline_black_24dp"
        app:showAsAction="withText|collapseActionView" />

    <item
        android:id="@+id/action_Restore"
        android:title="@string/restore_menu"
        android:menuCategory="container"
        android:visible="false"
        android:icon="@android:drawable/ic_dialog_alert"
        app:showAsAction="collapseActionView" />
</menu>
